Fixed the horizontal scrollbar (#235)
* Fixed the horizontal scrollbar

* Fixed Horizontal Scrollbar(Updated)

* Fixed Horizontal Scrollbar(Update#2)

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -27,4 +27,4 @@ $pronouns-font-size: 0.6em;
 $code-font-size: 0.8em;
 
 $sidebar-width: 300px;
-$sidebar-padding-sides: 15px;
+$sidebar-padding-sides: 10px;
